Fix txt margin on mobile

--- a/credit-report/styles.scss
+++ b/credit-report/styles.scss
@@ -24,10 +24,22 @@
     background: white;
     color: #1570ef;
     border: 1px solid #d0d5dd;
+    width: 113px;
+    height: 50px;
   }
 
   .continue-btn {
     padding: 12px 20px 12px 20px;
     margin-left: 16px;
+    width: 113px;
+    height: 50px;
+  }
+}
+
+// Mobile
+@media screen and (max-width: 770px) {
+  .transfer-txt p {
+    margin-right: 10%;
+    margin-left: 10%;
   }
 }
